--- a/referrer_tracker_extension/package.json
+++ b/referrer_tracker_extension/package.json
@@ -10,40 +10,30 @@
     "build:test": "node build-for-test.js",
     "postbuild:test": "node copy-dist-to-browser-folders.js",
     "test:unit": "jest",
-    "test:e2e": "npm run build:test && npx playwright test --reporter=line",
-    "test": "npm run test:unit && npm run test:e2e"
+    "test:cdp": "npm run build && npx ts-node e2e/cdp_extension_test.ts",
+    "test:cdp:multi": "npm run build && npx ts-node e2e/cdp_multi_page_tests.ts",
+    "test:cdp:background": "npm run build && npx ts-node e2e/cdp_background_state_tests.ts",
+    "test": "npm run test:unit"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@hpcc-js/wasm-zstd": "^1.2.1",
-    "cheerio": "^1.1.0",
-    "webextension-polyfill": "^0.12.0"
+    "@hpcc-js/wasm-zstd": "^1.2.1"
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
-    "@playwright/test": "^1.53.0",
     "@types/chrome": "^0.0.260",
+    "@types/chrome-remote-interface": "^0.31.14",
     "@types/jest": "^29.5.12",
+    "@types/jsdom": "^21.1.7",
     "@types/node": "^24.0.1",
-    "@types/webextension-polyfill": "^0.12.3",
+    "chrome-remote-interface": "^0.33.3",
     "esbuild": "^0.21.4",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^30.0.5",
+    "jsdom": "^26.1.0",
     "ts-jest": "^29.1.2",
     "typescript": "^5.4.2"
-  },
-  "jest": {
-    "preset": "ts-jest",
-    "testEnvironment": "node",
-    "transform": {
-      "^.+\\.tsx?$": "ts-jest"
-    },
-    "testMatch": [
-      "**/tests/**/*.test.ts"
-    ],
-    "setupFiles": [
-      "./tests/setup.ts"
-    ]
   }
 }
