--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "jest-environment-jsdom": "^30.0.0",
     "mocha": "^11.7.1",
     "ts-jest": "^29.3.2",
-    "typescript": "^4.3.2",
+    "typescript": "^5.9.2",
     "vscode-test": "^1.5.2"
   },
   "dependencies": {
@@ -79,6 +79,7 @@
     "@types/express": "^5.0.1",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "xstate": "^5.20.1",
     "zod": "^3.23.8"
   }
 }
