Add webpage filtering with LLM classification (Task 7)
- Implemented early-stage filtering before content processing
- Uses gpt-4o-mini to classify pages into 6 types
- Only processes "knowledge" pages by default
- Configurable filter rules via VS Code settings
- Comprehensive metrics tracking and reporting
- Added VS Code command to view filter statistics

Filter features:
- Classification: knowledge, interactive_app, aggregator, leisure, navigation, other
- Configurable allowed types and confidence threshold
- Model can override classification decision
- Detailed logging of all filter decisions
- Metrics: total pages, processed/filtered counts, type distribution

Configuration options:
- pkm-assistant.webpageFilter.enabled
- pkm-assistant.webpageFilter.allowedTypes
- pkm-assistant.webpageFilter.minConfidence
- pkm-assistant.webpageFilter.logDecisions

This will significantly reduce processing load by filtering out non-knowledge content
like web apps, social media feeds, and navigation pages.

--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
       {
         "command": "pkm-assistant.addHighlight",
         "title": "Add Highlight to Bullet Point"
+      },
+      {
+        "command": "pkm-assistant.showFilterMetrics",
+        "title": "PKM Assistant: Show Filter Metrics"
       }
     ],
     "configuration": {
@@ -29,6 +33,32 @@
           "default": "",
           "description": "Your OpenAI API key for the PKM Assistant",
           "scope": "application"
+        },
+        "pkm-assistant.webpageFilter.enabled": {
+          "type": "boolean",
+          "default": true,
+          "description": "Enable webpage filtering based on content type"
+        },
+        "pkm-assistant.webpageFilter.allowedTypes": {
+          "type": "array",
+          "default": ["knowledge"],
+          "description": "Types of pages to process",
+          "items": {
+            "type": "string",
+            "enum": ["knowledge", "interactive_app", "aggregator", "leisure", "navigation", "other"]
+          }
+        },
+        "pkm-assistant.webpageFilter.minConfidence": {
+          "type": "number",
+          "default": 0.7,
+          "minimum": 0,
+          "maximum": 1,
+          "description": "Minimum confidence threshold for page classification"
+        },
+        "pkm-assistant.webpageFilter.logDecisions": {
+          "type": "boolean",
+          "default": true,
+          "description": "Log filtering decisions to console"
         }
       }
     }
