Complete Tasks 11 & 12: Add webpage search command and link hover tooltips
Task 11 - Search Command:
- Added pkm-assistant.searchWebpages command to search stored webpages
- Implemented semantic search using LanceDB memory store
- Shows results in VS Code quick pick dropdown
- Allows inserting selected webpage as markdown link

Task 12 - Hover Tooltips:
- Created hover provider for markdown and plaintext files
- Detects URLs in markdown links and plain text
- Shows webpage metadata (title, URL, visited date, content preview)
- Implements caching for performance
- Added get_webpage_by_url function to DuckDB

Both features integrate with existing webpage storage and provide
better UI for accessing stored webpage content.

--- a/package.json
+++ b/package.json
@@ -43,6 +43,10 @@
       {
         "command": "pkm-assistant.addExplanation",
         "title": "PKM Assistant: Add Feedback Explanation"
+      },
+      {
+        "command": "pkm-assistant.searchWebpages",
+        "title": "PKM Assistant: Search Webpages"
       }
     ],
     "configuration": {
