--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,69 @@
-**/node_modules
-**/out
-**/dist
-.vscode
-.cursor
+# Dependencies
+node_modules/
+**/node_modules/
+
+# Build outputs
+dist/
+out/
+build/
+*.vsix
+**/dist/
+**/out/
+**/build/
+
+# Test coverage
+coverage/
+**/coverage/
+.nyc_output
+
+# IDE
+.vscode/
+.cursor/
+.idea/
+*.sublime-*
+*.code-workspace
+.claude/
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+# Environment
 .env
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.*.local
 CLAUDE.local.md
-.claude
-coverage
+
+# Changesets
+.changeset/*.md
+!.changeset/README.md
+
+# Temporary files
+*.tmp
+*.temp
+*.swp
+*.swo
+*~
+
+# Test artifacts
+test-results/
+e2e-screenshots/
+e2e-videos/
+
+# Package manager
+.pnpm-store/
+.yarn/
+package-lock.json
+yarn.lock
+
+# Misc
+*.bak
+*.orig
