--- a/browser/package.json
+++ b/browser/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "firefox_local_post_extension",
-  "version": "1.0",
-  "description": "",
+  "name": "@pkm-assistant/browser-extension",
+  "version": "0.1.0",
+  "description": "PKM Assistant Browser Extension - Captures and tracks web browsing for knowledge management",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -32,7 +32,7 @@
     "@types/jsdom": "^21.1.7",
     "@types/node": "^24.0.1",
     "chrome-remote-interface": "^0.33.3",
-    "esbuild": "^0.21.4",
+    "esbuild": "^0.25.8",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^30.0.5",
     "jsdom": "^26.1.0",
