Add comprehensive packaging infrastructure for all extensions
- Create unified packaging scripts for VS Code and browser extensions
- Add package-all.sh for Unix-like systems with colored output
- Add package-all.js for cross-platform Node.js packaging
- Configure .vscodeignore to exclude unnecessary files from VSIX
- Add MIT LICENSE file for VS Code extension
- Update root package.json with comprehensive packaging scripts
- Successfully package all three extensions:
  - VS Code extension: pkm-assistant-0.1.0.vsix (60.69 KB)
  - Chrome extension: chrome-extension.zip (140 KB)
  - Firefox extension: firefox-extension.zip (140 KB)
- Add release:prepare script for complete build and package workflow

--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "test": "npm run test --workspaces",
     "lint": "npm run lint --workspaces",
     "clean": "npm run clean --workspaces --if-present",
-    "package:vscode": "cd vscode && vsce package",
-    "package:chrome": "cd browser && npm run build && cd chrome && zip -r ../chrome-extension.zip .",
-    "package:firefox": "cd browser && npm run build && cd firefox && zip -r ../firefox-extension.zip ."
+    "package:all": "./scripts/package-all.sh",
+    "package:all:node": "node scripts/package-all.js",
+    "package:vscode": "cd vscode && npm run package",
+    "package:chrome": "cd browser && npm run build && cd chrome && zip -r ../chrome-extension.zip . -x '*.DS_Store'",
+    "package:firefox": "cd browser && npm run build && cd firefox && zip -r ../firefox-extension.zip . -x '*.DS_Store'",
+    "release:prepare": "npm run clean && npm install && npm run build && npm run package:all"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
