--- a/vscode/package.json
+++ b/vscode/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@pkm-assistant/vscode",
+  "name": "pkm-assistant",
   "displayName": "PKM Assistant",
   "description": "Personal Knowledge Management Assistant for VS Code",
   "version": "0.1.0",
   "publisher": "pkm-assistant",
   "engines": {
-    "vscode": "^1.60.0",
+    "vscode": "^1.99.0",
     "node": ">=18.0.0"
   },
   "categories": [
@@ -157,7 +157,7 @@
     "@types/vscode": "^1.99.1",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
-    "@vscode/vsce": "^2.22.0",
+    "@vscode/vsce": "^2.32.0",
     "eslint": "^8.56.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
