Complete Task 10: Implement procedural memory for custom filtering rules
- Create ProceduralMemoryStore for managing custom filtering rules
- Implement rule storage schema with priority and conflict resolution
- Add rule evaluation engine with compiled condition evaluators
- Create VS Code commands for rule creation and management
- Implement domain-specific and content pattern rule builders
- Add EnhancedWebpageFilter integrating procedural and episodic memory
- Support rule import/export for sharing configurations
- Add rule statistics and execution history tracking
- Integrate procedural memory with existing workflow
- Update episodic memory store with helper methods for integration

Acceptance Criteria completed:
✓ Procedural rule storage schema implemented
✓ Rule creation interface in VS Code
✓ Rule evaluation engine for filtering
✓ Domain-specific rules (always/never process)
✓ Content pattern rules (keywords/structures)
✓ Rule priority and conflict resolution
✓ Import/export rules for sharing
✓ Integration with episodic memory insights

--- a/vscode/package.json
+++ b/vscode/package.json
@@ -56,6 +56,34 @@
       {
         "command": "pkm-assistant.searchWebpages",
         "title": "PKM Assistant: Search Webpages"
+      },
+      {
+        "command": "pkm-assistant.createFilterRule",
+        "title": "PKM Assistant: Create Filter Rule"
+      },
+      {
+        "command": "pkm-assistant.manageFilterRules",
+        "title": "PKM Assistant: Manage Filter Rules"
+      },
+      {
+        "command": "pkm-assistant.createDomainRule",
+        "title": "PKM Assistant: Create Domain Rule"
+      },
+      {
+        "command": "pkm-assistant.createContentPatternRule",
+        "title": "PKM Assistant: Create Content Pattern Rule"
+      },
+      {
+        "command": "pkm-assistant.showRuleStatistics",
+        "title": "PKM Assistant: Show Rule Statistics"
+      },
+      {
+        "command": "pkm-assistant.exportFilterRules",
+        "title": "PKM Assistant: Export Filter Rules"
+      },
+      {
+        "command": "pkm-assistant.importFilterRules",
+        "title": "PKM Assistant: Import Filter Rules"
       }
     ],
     "configuration": {
