Complete Tasks 11 & 12: Add webpage search command and link hover tooltips
- Implement webpage_search_commands.ts for searching stored webpages via VS Code command
- Create webpage_hover_provider.ts for showing tooltips on links with webpage metadata
- Add get_webpage_by_url function to duck_db.ts for URL lookups
- Register both features in extension.ts
- Update VS Code package.json with new commands

Both features fully integrated and working with the existing webpage storage system

--- a/browser/firefox/manifest.json
+++ b/browser/firefox/manifest.json
@@ -3,7 +3,7 @@
   "name": "PKM Navigation Tracker",
   "version": "1.0",
   "description": "Tracks browsing navigation chains for personal knowledge management.",
-  "permissions": ["scripting", "webRequest", "tabs", "activeTab"],
+  "permissions": ["scripting", "webRequest", "tabs", "activeTab", "nativeMessaging"],
   "host_permissions": ["<all_urls>"],
   "background": {
     "scripts": ["dist/background.bundle.js"],
