--- a/browser/package.json
+++ b/browser/package.json
@@ -10,9 +10,15 @@
     "build:test": "node build-for-test.js",
     "postbuild:test": "node copy-dist-to-browser-folders.js",
     "test:unit": "jest",
-    "test:cdp": "npm run build && npx ts-node e2e/cdp_extension_test.ts",
-    "test:cdp:multi": "npm run build && npx ts-node e2e/cdp_multi_page_tests.ts",
-    "test:cdp:background": "npm run build && npx ts-node e2e/cdp_background_state_tests.ts",
+    "test:cdp": "npm run build && npx tsx e2e/cdp_extension_test.ts",
+    "test:cdp:multi": "npm run build && npx tsx e2e/cdp_multi_page_tests.ts",
+    "test:cdp:background": "npm run build && npx tsx e2e/cdp_background_state_tests.ts",
+    "test:e2e": "npm run build && npx tsx e2e/navigation_e2e_tests.ts",
+    "test:e2e:spa": "npm run build && npx tsx e2e/spa_navigation_tests.ts",
+    "test:e2e:multi-tab": "npm run build && npx tsx e2e/multi_tab_navigation_tests.ts",
+    "test:e2e:edge": "npm run build && npx tsx e2e/edge_cases_tests.ts",
+    "test:e2e:run-all": "npx tsx e2e/run_all_tests.ts",
+    "test:e2e:full": "npm run test:e2e && npm run test:e2e:spa && npm run test:e2e:multi-tab && npm run test:e2e:edge",
     "test": "npm run test:unit",
     "chrome": "node scripts/load-extension.js",
     "chrome:debug": "node scripts/load-extension.js --auto-open-devtools-for-tabs",
@@ -28,15 +34,19 @@
     "@jest/globals": "^29.7.0",
     "@types/chrome": "^0.0.260",
     "@types/chrome-remote-interface": "^0.31.14",
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^24.0.1",
     "chrome-remote-interface": "^0.33.3",
     "esbuild": "^0.25.8",
+    "express": "^4.18.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^30.0.5",
     "jsdom": "^26.1.0",
     "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.20.3",
     "typescript": "^5.4.2"
   }
 }
