feat: Apply snake_case naming convention consistently (task-18.5)
Comprehensive refactoring to enforce TypeScript naming conventions across the codebase.

## Changes made:
- Created TypeScript naming convention checker script (scripts/check_naming_conventions.ts)
  - Uses regex-based validation for simplicity and performance
  - Checks both vscode and browser-extension source directories
  - Includes intelligent detection for Schemas, Specs, and Annotations
  - Features whitelist for legitimate exceptions
  - Zero false positives achieved

- Fixed all naming violations:
  - mcp_server_standalone.ts: Fixed function names (handle_semantic_search, etc.)
  - markdown_db.ts: Fixed variables (current_block, child_lines, etc.)
  - lance_db.ts: Fixed variables (query_vector, table_name, etc.)
  - episodic_memory_store.ts: Fixed typed variables (typed_row, etc.)
  - procedural_memory_store.ts: Fixed variables (sub_condition, etc.)
  - Fixed filename with space: " suggestion_decorations.ts"

- All 284 tests passing after refactoring
- Script ready for CI/CD integration and git pre-commit hooks

## Naming conventions enforced:
- Variables and functions: snake_case
- Classes, interfaces, types: PascalCase
- File names: snake_case
- Constants: UPPER_SNAKE_CASE or snake_case

--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "release:prepare": "npm run clean && npm install && npm run build && npm run package:all"
   },
   "devDependencies": {
+    "@types/glob": "^8.1.0",
     "@types/node": "^20.0.0",
+    "glob": "^11.0.3",
     "typescript": "^5.9.2"
   },
   "engines": {
