--- a/vscode/tsconfig.json
+++ b/vscode/tsconfig.json
@@ -6,7 +6,7 @@
     "lib": ["ES2022"],
     "types": ["node", "vscode", "jest"],
     "strict": false,
-    "noImplicitAny": false,
+    "noImplicitAny": true,
     "strictNullChecks": false,
     "noUnusedLocals": false,
     "noUnusedParameters": false
