--- a/vscode/package.json
+++ b/vscode/package.json
@@ -181,6 +181,7 @@
     "@types/express": "^5.0.1",
     "@types/jest": "^29.5.14",
     "@types/node": "20.x",
+    "@types/supertest": "^6.0.3",
     "@types/uuid": "^10.0.0",
     "@types/vscode": "^1.99.1",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
@@ -188,6 +189,7 @@
     "@vscode/vsce": "^2.32.0",
     "eslint": "^8.56.0",
     "jest": "^29.7.0",
+    "supertest": "^7.1.4",
     "ts-jest": "^29.1.1",
     "typescript": "^5.9.2"
   },
