--- a/browser/package.json
+++ b/browser/package.json
@@ -9,6 +9,15 @@
     "postbuild": "node copy-dist-to-browser-folders.js",
     "build:test": "node build-for-test.js",
     "postbuild:test": "node copy-dist-to-browser-folders.js",
+    "build:production": "node scripts/build-production.js",
+    "package": "npm run build:production",
+    "publish:chrome": "node scripts/publish-chrome.js",
+    "publish:firefox": "node scripts/publish-firefox.js",
+    "publish:edge": "node scripts/publish-edge.js",
+    "publish:all": "npm run publish:chrome && npm run publish:firefox && npm run publish:edge",
+    "version:patch": "node scripts/version-bump.js patch",
+    "version:minor": "node scripts/version-bump.js minor",
+    "version:major": "node scripts/version-bump.js major",
     "test:unit": "jest",
     "test:cdp": "npm run build && npx tsx e2e/cdp_extension_test.ts",
     "test:cdp:multi": "npm run build && npx tsx e2e/cdp_multi_page_tests.ts",
@@ -38,6 +47,7 @@
     "@types/jest": "^29.5.12",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^24.0.1",
+    "archiver": "^7.0.1",
     "chrome-remote-interface": "^0.33.3",
     "esbuild": "^0.25.8",
     "express": "^4.18.2",
