--- a/backlog/config.yml
+++ b/backlog/config.yml
@@ -1,4 +1,4 @@
-project_name: "browser-pkm"
+project_name: "mindsteep"
 default_status: "To Do"
 statuses: ["To Do", "In Progress", "Done"]
 labels: []
