--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@pkm-assistant/monorepo",
+  "name": "@mindsteep/monorepo",
   "version": "0.0.0",
   "private": true,
-  "description": "PKM Assistant - Personal Knowledge Management tools for developers",
+  "description": "Mindsteep - Browser-based knowledge management through mindful web steeping",
   "workspaces": [
     "vscode",
     "browser"
@@ -31,11 +31,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/your-username/pkm-assistant.git"
+    "url": "https://github.com/your-username/mindsteep.git"
   },
   "keywords": [
-    "pkm",
+    "mindsteep",
     "knowledge-management",
+    "pkm",
+    "web-memory",
+    "browser-history",
     "vscode-extension",
     "browser-extension",
     "productivity"
