--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/your-username/mindsteep.git"
+    "url": "https://github.com/CRJFisher/mindsteep.git"
   },
   "keywords": [
     "mindsteep",
